traversal.line.traversalbyline.TraversalByLine.scala.error
Erreur de compilation :
TraversalByLine:9: error: not found: value setYX
    else {setYX(0)
          ^